[package]
name = "job_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["raw_value"] }
sqlx = { version = "0.7.2", features = ["all-databases", "runtime-tokio", "json"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
typetag = "0.2.13"
uuid = { version = "1.5.0", features = ["v4"] }
