[package]
name = "job_queue"
version = "0.0.11"
edition = "2021"
authors = ["Georges KABBOUCHI <georges.kabbouchi@gmail.com>"]
description = "A simple, efficient Rust library for handling asynchronous job processing and task queuing."
keywords = ["queue", "worker", "job", "background", "task"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/KABBOUCHI/job_queue"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["raw_value"] }
sqlx = { version = "0.7.2", features = ["all-databases", "runtime-tokio", "json", "any"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
typetag = "0.2.13"
uuid = { version = "1.5.0", features = ["v4"] }

[dev-dependencies]
env_logger = "0.10.1"
